# video-editor

./: .env  .gitignore  Dockerfile  README.md  celery_worker.Dockerfile  docker-compose.yml  env.py  index.html  logs.py  pyproject.toml  requirements.txt  router.py  schemas.py  service.py  tasks.py  textJson.json
Connections/: Postgres_connection.py  celery_connection.py  minio_connection.py  postgres_connection.py
frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
frontend/src/: App.css  App.js  Basic.jsx  BasicHelpers.js  Editor.jsx  Player.jsx  Renderer.jsx  TextRenderer.jsx  basic.css  editor.css  helper_functions.js
frontend/src/CommonComponents/: AnimatableText.jsx  Customizable1.jsx  CustomizableText.jsx  EditableText.jsx  EditableTextInput.jsx  MyText.jsx  ResizableText.jsx  SvgToVideo.jsx  VideoConversion.jsx  index.js
frontend/src/assets/Basic2/: index.js
frontend/src/assets/svg/: index.js
frontend/src/constants/: transitions.js
frontend/src/exampleApiPayload/: example.json  exampleText.json  exampleVideo.json  textJson.json
frontend/src/helper_functions/: download_content.js  record_canvas_video.js
frontend/src/services/apis/: index.js
