[tool.poetry]
name = "video-editor"
version = "0.1.0"
description = ""
authors = ["ankitmandloi174 <ankitmandloi174@gmail.com>"]
readme = "README.md"
packages = [{include = "video_editor"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
